<resources>
  <string name="app_name">Users Sample</string>

  <string name="add_user">Add user</string>
  <string name="delete_all">Delete all</string>
  <string name="delete">Delete</string>
  <string name="edit">Edit</string>

  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="age">Age</string>
  <string name="gender">Gender</string>
  <string name="gender_male">Male</string>
  <string name="gender_female">Female</string>
  <string name="gender_other">Other</string>
  <string name="address">Address</string>

  <string name="choose_existing">Choose Existing</string>
  <string name="add_new">Add New</string>
  <string name="add_new_address">Add New Address</string>
  <string name="add">Add</string>

</resources>
