<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="pl.gmat.users.feature.details.ui.UserDetailsState" />

        <import type="android.view.View" />

        <variable
            name="state"
            type="LiveData&lt;UserDetailsState>" />

        <variable
            name="viewModel"
            type="pl.gmat.users.feature.details.ui.UserDetailsViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/firstNameLabelTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{state.user.firstName}"
                app:layout_constraintBaseline_toBaselineOf="@+id/firstNameLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline" />

            <TextView
                android:id="@+id/lastNameLabelTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_margin"
                android:text="@string/last_name"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{state.user.lastName}"
                app:layout_constraintBaseline_toBaselineOf="@+id/lastNameLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline" />

            <TextView
                android:id="@+id/ageLabelTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_margin"
                android:text="@string/age"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameLabelTextView" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{state.user.age}"
                app:layout_constraintBaseline_toBaselineOf="@+id/ageLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline" />

            <TextView
                android:id="@+id/genderLabelTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_margin"
                android:text="@string/gender"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageLabelTextView" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:genderText="@{state.user.gender}"
                app:layout_constraintBaseline_toBaselineOf="@+id/genderLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline" />

            <TextView
                android:id="@+id/addressLabelTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_margin"
                android:text="@string/address"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderLabelTextView" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{state.user.address.value}"
                app:layout_constraintBaseline_toBaselineOf="@+id/addressLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalGuideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>